# WireNEC

./: .gitignore  README.md  pyproject.toml
examples/: README.md
examples/GROTOV_IEEETAP_2022/: geometry_specifications.py  wire_bundle_superscatterer.py
examples/KOSULNIKOV_JQSRT_2022/: circullar_wire_bundle_superscatterer.py
examples/KOZLOV_APL_2016/: magneto_electric_meta_particle.py
examples/MIKHAILOVSKAYA_PRA_2022/: CST_data.npy  superradiant_scattering_limit.py
examples/single_dipole/: single_wire_forward_scattering.py
optimizations/broadband_backscatterer/: analyze_results.py  distributions.py  optimize_structure.py  optimizer.py  utils.py
wirenec/geometry/: __init__.py  geometry.py  samples.py
wirenec/scattering/: __init__.py  scattering.py
wirenec/visualization/: __init__.py  geometry_visualization.py  spectra_visualization.py
