[tool.poetry]
name = "wirenec"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pynec = "1.7.3.4"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core", "setuptools", "wheel", "numpy>=1.23.5"]
build-backend = "poetry.core.masonry.api"
